--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet">
 
-  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <title>TITLE</title>
   </head>
 
   <body>
-    <div class="container">
-      
+    <div class="container left">
+    </div>
+    <div class="contrainer right">
     </div>
   </body>
 </html>
