--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <script src="js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <title>TITLE</title>
   </head>
 
   <body>
-    <div class="container left">
-    </div>
-    <div class="contrainer right">
+    <div class="header"></div>
+    <div class="two-up">
+      <div class="column left"></div>
+        <rect></rect>
+      <div class="column right"></div>
     </div>
   </body>
 </html>
