--- a/index.html
+++ b/index.html
@@ -7,21 +7,324 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <script src="js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <title>TITLE</title>
   </head>
 
   <body>
-    <div class="header"></div>
-    <div class="two-up">
-      <div class="column left"></div>
-        <rect></rect>
-      <div class="column right"></div>
+    <div class="header">
+      <h1>[a] adjacent</h1>
     </div>
+    <div class="two-up">
+      <div class="column left">
+        <div class="grid-tool box">
+          <div class="grid">
+            <!-- row 1 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 2 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 3 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 4 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 5 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 6 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 7 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 8 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 9 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 10 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 11 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 12 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 13 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 14 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 15 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 16 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 17 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 18 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 19 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <!-- row 20 -->
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+            <div class="square a"></div>
+          </div>
+        </div>
+      </div>
+      <div class="column right">
+        <div class="canvas box"></div>
+      </div>
+    </div>
+    <div class="exhibition">
+      <div id="exhibit-statement-title">
+        <h1>[a] adjacent</h1>
+      </div>
+      <div id="exhibit-statement">
+        <p>ut porttitor leo a diam sollicitudin tempor. Arcu non sodales neque sodales ut etiam sit. Egestas sed tempus urna et pharetra. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Sit amet nulla facilisi morbi tempus iaculis urna. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. In fermentum et sollicitudin ac orci phasellus egestas tellus.
+          Ornare arcu odio ut sem. Eget aliquet nibh praesent tristique magna. Eu non diam phasellus vestibulum lorem sed risus ultricies. Nunc eget lorem dolor sed. Aliquam nulla facilisi cras fermentum. Eget mauris pharetra et ultrices neque ornare aenean. A condimentum vitae sapien pellentesque habitant. Tristique sollicitudin nibh sit amet commodo nulla. Interdum varius sit amet mattis vulputate enim nulla. Quisque egestas diam in arcu cursus euismod quis. Eget nunc scelerisque viverra mauris in aliquam sem fringilla ut. Cursus metus aliquam eleifend mi in nulla. Vitae turpis massa sed elementum tempus egestas sed. Sed sed risus pretium quam. Nunc sed blandit libero volutpat sed cras ornare arcu. Consectetur adipiscing elit ut aliquam purus sit. Fringilla ut morbi tincidunt augue interdum. Tempor orci dapibus ultrices in. Rhoncus aenean vel elit scelerisque. Commodo nulla facilisi nullam vehicula ipsum.
+          Eu augue ut lectus arcu bibendum. Pharetra convallis posuere morbi leo. Mauris rhoncus aenean vel elit scelerisque mauris. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Cras sed felis eget velit aliquet sagittis. Lectus sit amet est placerat in. Tincidunt nunc pulvinar sapien et. Natoque penatibus et magnis dis parturient montes. Tincidunt ornare massa eget egestas purus viverra accumsan in. Nisl condimentum id venenatis a. Ornare lectus sit amet est placerat in egestas erat. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Non pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. Fermentum dui faucibus in ornare quam viverra orci. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Ullamcorper sit amet risus nullam eget. Vulputate dignissim suspendisse in est ante in nibh mauris. Molestie a iaculis at erat pellentesque. Turpis massa tincidunt dui ut ornare.
+        </p>
+      </div>
+    </div>
+    <div class="contributing-artists">
+      <div class="artist-text"</div>
+        <h2>contributing designers</h2>
+        <br>
+        <br>
+        <p class="names">Elsie-Mae Cantrell<br>
+          Oliver Dean<br>
+          Amrit Sheppard<br>
+          Zayna Espinosa<br>
+          Orlaith Bates<br>
+          Susanna Whitehead<br>
+          Yvonne Nieves<br>
+          Darcey Mcfarland<br>
+          Wojciech George<br>
+          Asia Sierra<br>
+          Alivia Ross<br>
+          Huma Kaur<br>
+          Angelika Morrison<br>
+          Elsa Webster<br>
+          Kelise Haworth<br>
+          Abbas Clements<br>
+          Lena Mccoy<br>
+          Zakariya Sharma<br>
+          Ryker Castaneda<br>
+          Aubrey Porter<br>
+          Stanley Ramirez<br>
+          Blanche Paul<br>
+          Tyron Saunders<br>
+          Mea Pike<br>
+          Eddison Pace<br>
+          Jasmine Weeks<br>
+          Kaydee Fischer<br>
+          Sanaya Bowden<br>
+          Tyreece Burns<br>
+          Eryk Byers<br>
+          Coco Chaney<br>
+          Abdur Rice<br>
+          Louie Hebert<br>
+          Jody Carpenter<br>
+          Shakir Donnelly<br>
+          Samah Guerra<br>
+          Kerys Griffith<br>
+          Geoffrey Edge<br>
+          Sean Jacobson<br>
+          Neave Cannon<br>
+          Lorelei Turnbull<br>
+          Ifrah Nguyen<br>
+          Efa Joyce<br>
+          Alice Villalobos<br>
+          Noa Crawford<br>
+          Ayaz Lopez<br>
+          Simon Horn<br>
+          Keane Sumner<br>
+          Arya Caldwell<br>
+          Ezra Harmon<br>
+          Misha Vaughn<br>
+          Carina Betts
+        </p>
+      </div>
+      
+      <div></div>
+
+    </div>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
