Working 1 Square Array

--- a/index.html
+++ b/index.html
@@ -19,16 +19,22 @@
     <div class="header">
       <h1>[a] adjacent</h1>
     </div>
+    <button onclick="changeImage()">fuck</button>
     <div class="two-up">
       <div class="column left">
         <div class="grid-tool box">
+          <!-- <button onclick="changeColor()"></button> -->
           <div class="grid">
             <!-- row 1 -->
+            <div class="square a">
+              <img onclick="changeImage()" src="img/black.png" alt="black" id="mainImage">
+            </div>
+            <div class="square a">
+              <img onclick="changeImage()" src="img/black.png" alt="black" class="mainImage">
+            </div>
             <div class="square a"></div>
             <div class="square a"></div>
-            <div class="square a"></div>
-            <div class="square a"></div>
-            <div class="square a"></div>
+            <div class="divItem square a"></div>
             <div class="square a"></div>
             <div class="square a"></div>
             <div class="square a"></div>
