Test file added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <img onclick="changeImage()" src="img/black.png" alt="black" id="mainImage">
             </div>
             <div class="square a">
-              <img onclick="changeImage()" src="img/black.png" alt="black" class="mainImage">
+              <img onclick="changeImage()" src="img/black.png" alt="black" id="mainImage">
             </div>
             <div class="square a"></div>
             <div class="square a"></div>
