better test files

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
         </div>
       </div>
       <div class="column right">
-        <div class="canvas box"></div>
+        <!-- <div class="canvas box"></div> -->
+        <canvas class="box" id="drawing-board"></canvas>
       </div>
     </div>
     <div class="exhibition">
