added print and save buttons

--- a/01_Together/index.html
+++ b/01_Together/index.html
@@ -19,9 +19,11 @@
     <div class="header">
       <h1>[a] adjacent</h1>
     </div>
-    <div class="buttonbar">
-      <button onclick="changeImage()">save</button>
-      <button onclick="changeImage()">print</button>
+    <div id="buttonbar">
+      <div id="button-container">
+        <!-- <button id="Sbutt" onclick="changeImage()">save</button> -->
+        <button id="printbutt" onclick="window.print()"><img src="/img/p.png"></button>
+      </div>
     </div>
     <div class="sketchdiv">
       <div id="sketch-container"></div>
