Final Folder Structure

--- a/AR-TRANSMEDIA-EXHIBIT/index.html
+++ b/AR-TRANSMEDIA-EXHIBIT/index.html
@@ -27,9 +27,9 @@
         <br>
       </div>
       <div id="print-exhibit-statement">
-        <p style="font-size: 28px">asdfut porttitor leo a diam sollicitudin tempor. Arcu non sodales neque sodales ut etiam sit. Egestas sed tempus urna et pharetra. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Sit amet nulla facilisi morbi tempus iaculis urna. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. In fermentum et sollicitudin ac orci phasellus egestas tellus.
-          Ornare arcu odio ut sem. Eget aliquet nibh praesent tristique magna. Eu non diam phasellus vestibulum lorem sed risus ultricies. Nunc eget lorem dolor sed. Aliquam nulla facilisi cras fermentum. Eget mauris pharetra et ultrices neque ornare aenean. A condimentum vitae sapien pellentesque habitant. Tristique sollicitudin nibh sit amet commodo nulla. Interdum varius sit amet mattis vulputate enim nulla. Quisque egestas diam in arcu cursus euismod quis. Eget nunc scelerisque viverra mauris in aliquam sem fringilla ut. Cursus metus aliquam eleifend mi in nulla. Vitae turpis massa sed elementum tempus egestas sed. Sed sed risus pretium quam. Nunc sed blandit libero volutpat sed cras ornare arcu. Consectetur adipiscing elit ut aliquam purus sit. Fringilla ut morbi tincidunt augue interdum. Tempor orci dapibus ultrices in. Rhoncus aenean vel elit scelerisque. Commodo nulla facilisi nullam vehicula ipsum.
-          Eu augue ut lectus arcu bibendum.</p>
+        <p style="font-size: 28px">[a] adjacent is a typographic exploration through processes of transfers. Letterforms bounce between the edges of physical and digital space creating new silhouettes in the process. Type is transferred from print to web, back into print creating iteration upon iteration of the original form. [a] adjacent examines the ongoing relationship between analog and digital spaces, studying the aspects of form that get lost in the process versus what gets added. 
+
+        </p>
       </div>
     </div>
     <!-- PRINT HEADER -->
@@ -54,8 +54,7 @@
         <h1>[a] adjacent</h1>
       </div>
       <div id="exhibit-statement">
-        <p>ut porttitor leo a diam sollicitudin tempor. Arcu non sodales neque sodales ut etiam sit. Egestas sed tempus urna et pharetra. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Sit amet nulla facilisi morbi tempus iaculis urna. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. In fermentum et sollicitudin ac orci phasellus egestas tellus.
-          Ornare arcu odio ut sem. Eget aliquet nibh praesent tristique magna. Mauris rhoncus aenean vel elit scelerisque mauris. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Cras sed felis eget velit aliquet sagittis. Lectus sit amet est placerat in. Tincidunt nunc pulvinar sapien et. Natoque penatibus et magnis dis parturient montes. Tincidunt ornare massa eget egestas purus viverra accumsan in. Nisl condimentum id venenatis a. Ornare lectus sit amet est placerat in egestas erat. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Non pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. Fermentum dui faucibus in ornare quam viverra orci. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Ullamcorper sit amet risus nullam eget. Vulputate dignissim suspendisse in est ante in nibh mauris. Molestie a iaculis at erat pellentesque. Turpis massa tincidunt dui ut ornare.
+        <p>[a] adjacent is a typographic exploration through processes of transfers. Letterforms bounce between the edges of physical and digital space creating new silhouettes in the process. Type is transferred from print to web, back into print creating iteration upon iteration of the original form. [a] adjacent examines the ongoing relationship between analog and digital spaces, studying the aspects of form that get lost in the process versus what gets added. 
         </p>
       </div>
     </div>
@@ -121,16 +120,16 @@
       </div>     
     </div>
 
-    <div classs="gallery-container">
+    <div class="gallery-container">
       <div id="gallery">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        <img src="img/gallery/a-adjacent.png" alt="image">
-        
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+
 
 
 
