--- a/AR-TRANSMEDIA-EXHIBIT/index.html
+++ b/AR-TRANSMEDIA-EXHIBIT/index.html
@@ -122,13 +122,13 @@
 
     <div class="gallery-container">
       <div id="gallery">
+        <img id="pic" src="img/gallery/a-adjacent-06.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent-01.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent-02.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent-03.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent-05.png" alt="image">
         <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
-        <img id="pic" src="img/gallery/a-adjacent.png" alt="image">
+        <img id="pic" src="img/gallery/a-adjacent-07.png" alt="image">
 
 
 
